--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,8 +16,4 @@ lxml
 openpyxl
 matplotlib
 seaborn
-
-# Download spaCy English model after installing spaCy
-# Use the pip directive for en_core_web_sm
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
