--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,8 +12,10 @@ python-docx
 tqdm
 werkzeug
 gunicorn
+textdistance
 lxml
 openpyxl
 matplotlib
 seaborn
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
