--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,21 @@
-flask
-flask-cors
-numpy
-pandas
-scikit-learn
-joblib
-nltk
-spacy
-pdfminer.six
-PyPDF2
-python-docx
-tqdm
-werkzeug
-gunicorn
-textdistance
-lxml
-openpyxl
-matplotlib
-seaborn
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-
+flask==3.1.1
+flask-cors==6.0.1
+numpy==2.3.0
+pandas==2.3.0
+scikit-learn==1.7.0
+joblib==1.5.1
+nltk==3.9.1
+spacy==3.7.5  # Use a specific version with a pre-built wheel
+pdfminer.six==20250506
+PyPDF2==3.0.1
+python-docx==1.1.2
+tqdm==4.67.1
+werkzeug==3.1.3
+gunicorn==23.0.0
+textdistance==4.6.3
+lxml==5.4.0
+openpyxl==3.1.5
+matplotlib==3.10.3
+seaborn==0.13.2
+# Install the spacy model directly via pip
+en-core-web-sm==3.7.1
